--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 32px;
+  gap: 24px;
 }
 
 .location-name {
@@ -104,8 +104,7 @@
   font-weight: bold;
 }
 
-img {
-  filter: invert(18%) sepia(43%) saturate(409%) hue-rotate(156deg) brightness(93%) contrast(89%);
+.weather-type {
 }
 
 .high {
@@ -124,9 +123,9 @@ img {
 }
 
 .forecast {
-  margin-top: 48px;
   gap: 24px;
   flex-wrap: 1;
+  list-style: none;
 }
 
 /* Weather Card */
