--- a/src/App.css
+++ b/src/App.css
@@ -123,7 +123,6 @@
 .precip {
   gap: 6px;
   color: #283B45;
-  font-weight: bold;
 }
 
 .high {
@@ -143,8 +142,24 @@
 
 .forecast {
   gap: 24px;
-  flex-wrap: 1;
+  flex-wrap: wrap;
   list-style: none;
+  padding-inline-start: 0;
+  justify-content: center;
+  align-items: center;
+}
+
+.forecast li {
+  margin: 0;
+  padding: 0;
+}
+
+.ul-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 24px;
+  width: 100%;
 }
 
 /* Weather Card */
@@ -165,6 +180,74 @@
 
 .fade-in-four {
   animation: fade-in 4s ease
+}
+
+
+@media(max-width: 900px) {
+
+  .navbar {
+   justify-content: center;
+   gap: 12px;
+  }
+
+  .location-form {
+  }
+
+  .location-form input {
+    width: 100px;
+  }
+
+  .logo {
+    font-size: x-large;
+  }
+
+  .location-name {
+    font-size: 32px;
+  }
+
+  button {
+    font-size: 10px;
+  }
+
+  .temps {
+    gap: 64px
+  }
+
+  .ul-container {
+    gap: 8px;
+  }
+
+  .forecast {
+    max-width: 100%;
+    gap: 64px;
+  }
+
+  .searchbar {
+    width: auto;
+  }
+
+  .weather-card {
+    gap: 24px;
+  }
+
+  .weather-card img {
+  }
+}
+
+@media(max-width: 500px) {
+  .weather-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    gap: 12px;
+    background-color: #CAD1CA;
+    padding: 12px;
+  }
+
+  .forecast {
+    gap: 12px;
+  }
 }
 
 @keyframes fade-in {
