--- a/src/App.css
+++ b/src/App.css
@@ -123,6 +123,7 @@
 .precip {
   gap: 6px;
   color: #283B45;
+  font-size: 12px;
 }
 
 .high {
@@ -190,9 +191,6 @@
    gap: 12px;
   }
 
-  .location-form {
-  }
-
   .location-form input {
     width: 300px;
   }
@@ -213,6 +211,10 @@
     gap: 64px
   }
 
+  .precip {
+    font-size: 8px;
+  }
+
   .ul-container {
     gap: 8px;
   }
@@ -228,9 +230,6 @@
 
   .weather-card {
     gap: 24px;
-  }
-
-  .weather-card img {
   }
 }
 
